--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^3.8.1",
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
+    "classnames": "^2.2.6",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
@@ -13,6 +14,7 @@
     "react-scripts": "^2.1.3",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.7",
+    "redux-form": "^8.1.0",
     "redux-promise-middleware": "^5.1.1",
     "redux-thunk": "^2.3.0",
     "semantic-ui-react": "^0.84.0"
